Add background music and center start button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-        </audio>
+        <source src="music/background_music.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <script src="script.js"></script>
 </body>
